--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,10 @@
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
+#.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
-!.vscode/launch.json
+#!.vscode/launch.json
 !.vscode/extensions.json
 
 # misc
