--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "../../dist",
     "removeComments": true,
     "target": "es6",
-    "types": []
+    "types": ["node"]
   },
   "include": [
     "*"
