--- a/angular.json
+++ b/angular.json
@@ -3,11 +3,11 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "table-games": {
+    "board-games": {
       "root": "",
       "sourceRoot": "src/client",
       "projectType": "application",
-      "prefix": "tg",
+      "prefix": "bg",
       "schematics": {
         "@schematics/angular:component": {
           "styleext": "scss"
@@ -54,11 +54,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "table-games:build"
+            "browserTarget": "board-games:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "table-games:build:production"
+              "browserTarget": "board-games:build:production"
             }
           }
         },
@@ -93,7 +93,7 @@
         }
       }
     },
-    "table-games-e2e": {
+    "board-games-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -101,11 +101,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "table-games:serve"
+            "devServerTarget": "board-games:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "table-games:serve:production"
+              "devServerTarget": "board-games:serve:production"
             }
           }
         },
@@ -121,5 +121,5 @@
       }
     }
   },
-  "defaultProject": "table-games"
+  "defaultProject": "board-games"
 }
