--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
             "styles": [
               "src/client/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/hammerjs/hammer.min.js"
+            ]
           },
           "configurations": {
             "production": {
