--- a/package.json
+++ b/package.json
@@ -34,8 +34,16 @@
     "@nestjs/common": "^5.3.7",
     "@nestjs/core": "^5.3.7",
     "@nestjs/websockets": "^5.3.7",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/router-store": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
+    "@ngrx/store-devtools": "^6.1.0",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngrx-actions": "^4.0.0",
+    "ngrx-store-freeze": "^0.2.4",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.2.0",
     "typescript": "~2.9.2",
@@ -46,6 +54,7 @@
     "@angular/cli": "~6.2.2",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@ngrx/schematics": "^6.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
