--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@ngrx/router-store": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
-    "@ngx-translate/core": "10.0.0",
+    "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
