--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@ngx-translate/http-loader": "^3.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "js-sha256": "^0.9.0",
     "ngrx-actions": "^4.0.0",
     "ngrx-store-freeze": "^0.2.4",
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.2.0",
     "typescript": "~2.9.2",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
