Add user names generator

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "~6.2.0",
     "typescript": "~2.9.2",
+    "unique-names-generator": "^1.0.13",
     "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
