Add some initial models and first api call

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,11 +7,15 @@
       "order": "asc"
     },
     {
+      "identifier": "/@nestjs/",
+      "order": "asc"
+    },
+    {
       "identifier": "/@ngrx/",
       "order": "asc"
     },
     {
-      "identifier": "/rxjs//",
+      "identifier": "/rxjs/?/",
       "order": "asc"
     },
     {
