--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -9,7 +9,9 @@
     "outDir": "../../dist",
     "removeComments": true,
     "target": "es6",
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "*"
