--- a/angular.json
+++ b/angular.json
@@ -56,7 +56,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "board-games:build"
+            "browserTarget": "board-games:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
