Improve dto references

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
       "dom"
     ],
     "paths": {
+      "@dto/*": [
+        "src/shared/dto/*"
+      ],
       "ngrx-actions": [
         "node_modules/ngrx-actions/dist"
       ]
