Move nodemon to prod in order to fix references alias problem for node

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "start.server": "nodemon",
-    "start.server:debug": "nodemon --config nodemon-debug.json",
-    "build.server:prod": "npm run clean && ng build --prod && tsc -p src/server/tsconfig.json",
-    "start.server:prod": "node dist/server/main.js",
+    "start.server": "nodemon --config nodemon/nodemon-dev.json",
+    "start.server:debug": "nodemon --config nodemon/nodemon-debug.json",
+    "build.server:prod": "npm run clean && ng build --prod",
+    "start.server:prod": "nodemon --config nodemon/nodemon-prod.json",
     "build": "ng build",
     "clean": "rimraf dist",
     "test": "ng test",
