--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ngrx/store-devtools": "^6.1.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
+    "angulartics2": "^7.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "js-sha256": "^0.9.0",
