Add initial authentication

--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -10,7 +10,8 @@
     "removeComments": true,
     "target": "es6",
     "types": [
-      "node"
+      "node",
+      "socket.io-client"
     ]
   },
   "include": [
