--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "board-games",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pbazurin/board-games.git"
+  },
+  "license": "MIT",
   "engines": {
     "node": "10.10.0",
     "npm": "6.4.1"
@@ -20,46 +25,45 @@
     "heroku-postbuild": "npm run build.server:prod"
   },
   "dependencies": {
-    "@angular/animations": "^6.1.8",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
-    "@nestjs/common": "^5.3.7",
-    "@nestjs/core": "^5.3.7",
-    "@nestjs/websockets": "^5.3.7",
-    "@ngx-translate/core": "^10.0.2",
-    "@ngx-translate/http-loader": "^3.0.1",
+    "@angular/animations": "^7.0.2",
+    "@angular/cdk": "^7.0.2",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/core": "^7.0.2",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/forms": "^7.0.2",
+    "@angular/http": "^7.0.2",
+    "@angular/material": "^7.0.2",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/router": "^7.0.2",
+    "@nestjs/common": "^5.4.0",
+    "@nestjs/core": "^5.4.0",
+    "@nestjs/websockets": "^5.4.0",
+    "@ngx-translate/core": "^11.0.0",
+    "@ngx-translate/http-loader": "^4.0.0",
     "angulartics2": "^7.0.2",
-    "core-js": "^2.5.4",
+    "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "js-sha256": "^0.9.0",
     "reflect-metadata": "^0.1.12",
     "rollbar": "^2.5.0",
-    "rxjs": "~6.2.0",
-    "typescript": "~2.9.2",
-    "unique-names-generator": "^1.0.13",
+    "rxjs": "~6.3.3",
+    "typescript": "~3.1.6",
+    "unique-names-generator": "^1.0.14",
     "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.2",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@ngrx/schematics": "^6.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "~7.0.4",
+    "@angular/compiler-cli": "^7.0.2",
+    "@angular/language-service": "^7.0.2",
+    "@types/jasmine": "^2.8.11",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "~10.12.2",
     "@types/socket.io-client": "^1.4.32",
-    "codelyzer": "~4.3.0",
+    "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -67,10 +71,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.6",
     "protractor": "~5.4.0",
     "rimraf": "^2.6.2",
-    "ts-node": "~7.0.0",
+    "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.6.0",
     "tslint": "~5.11.0"
   }
