--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/jasmine": "^2.8.11",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~10.12.2",
+    "@types/socket.io": "^2.1.0",
     "@types/socket.io-client": "^1.4.32",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
