Improve chat + formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
     "**/build/**/*",
     "**/out/**/*",
     "**/dist/**/*",
-    "**/polyfills.ts"
+    "**/polyfills.ts",
+    "**/test.ts"
   ]
 }
