--- a/package.json
+++ b/package.json
@@ -25,27 +25,28 @@
     "heroku-postbuild": "npm run clean && npm run build:prod"
   },
   "dependencies": {
-    "@angular/animations": "^7.0.2",
-    "@angular/cdk": "^7.0.2",
-    "@angular/common": "^7.0.2",
-    "@angular/compiler": "^7.0.2",
-    "@angular/core": "^7.0.2",
+    "@angular/animations": "^7.1.0",
+    "@angular/cdk": "^7.1.0",
+    "@angular/common": "^7.1.0",
+    "@angular/compiler": "^7.1.0",
+    "@angular/core": "^7.1.0",
     "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "^7.0.2",
-    "@angular/http": "^7.0.2",
-    "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "^7.0.2",
-    "@angular/platform-browser-dynamic": "^7.0.2",
-    "@angular/router": "^7.0.2",
+    "@angular/forms": "^7.1.0",
+    "@angular/http": "^7.1.0",
+    "@angular/material": "^7.1.0",
+    "@angular/platform-browser": "^7.1.0",
+    "@angular/platform-browser-dynamic": "^7.1.0",
+    "@angular/router": "^7.1.0",
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/websockets": "^5.4.0",
-    "@ngx-translate/core": "^11.0.0",
+    "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "angulartics2": "^7.0.2",
+    "angulartics2": "^7.2.0",
     "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "js-sha256": "^0.9.0",
+    "nodemon": "^1.18.7",
     "reflect-metadata": "^0.1.12",
     "rollbar": "^2.5.0",
     "rxjs": "~6.3.3",
@@ -54,13 +55,13 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/language-service": "^7.0.2",
-    "@types/jasmine": "^2.8.11",
+    "@angular-devkit/build-angular": "^0.10.7",
+    "@angular/cli": "^7.0.7",
+    "@angular/compiler-cli": "^7.1.0",
+    "@angular/language-service": "^7.1.0",
+    "@types/jasmine": "^2.8.12",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~10.12.2",
+    "@types/node": "^10.12.10",
     "@types/socket.io": "^2.1.0",
     "@types/socket.io-client": "^1.4.32",
     "codelyzer": "~4.5.0",
@@ -71,11 +72,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.18.6",
     "protractor": "~5.4.0",
     "rimraf": "^2.6.2",
     "ts-node": "^7.0.1",
-    "tsconfig-paths": "^3.6.0",
+    "tsconfig-paths": "^3.7.0",
     "tslint": "~5.11.0"
   }
 }
