--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "npm run clean && npm run build:prod"
+    "extract-translations": "ngx-translate-extract -i ./src/client/ -o ./src/client/assets/i18n/en.json ./src/client/assets/i18n/ru.json ./src/client/assets/i18n/ua.json -c -s -f namespaced-json -m markForTranslation",
+    "heroku-postbuild": "npm run clean && npm run lint && npm run build:prod"
   },
   "dependencies": {
     "@angular/animations": "^7.1.0",
@@ -59,6 +60,7 @@
     "@angular/cli": "^7.0.7",
     "@angular/compiler-cli": "^7.1.0",
     "@angular/language-service": "^7.1.0",
+    "@biesbjerg/ngx-translate-extract": "^2.3.4",
     "@types/jasmine": "^2.8.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^10.12.10",
