--- a/package.json
+++ b/package.json
@@ -26,45 +26,45 @@
     "heroku-postbuild": "npm run clean && npm run lint && npm run build:prod"
   },
   "dependencies": {
-    "@angular/animations": "^7.1.0",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/core": "^7.1.0",
-    "@angular/flex-layout": "^7.0.0-beta.19",
-    "@angular/forms": "^7.1.0",
-    "@angular/http": "^7.1.0",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
-    "@nestjs/common": "^5.4.0",
-    "@nestjs/core": "^5.4.0",
-    "@nestjs/websockets": "^5.4.0",
+    "@angular/animations": "^7.2.2",
+    "@angular/cdk": "^7.3.0",
+    "@angular/common": "^7.2.2",
+    "@angular/compiler": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/flex-layout": "^7.0.0-beta.23",
+    "@angular/forms": "^7.2.2",
+    "@angular/http": "^7.2.2",
+    "@angular/material": "^7.3.0",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/router": "^7.2.2",
+    "@nestjs/common": "^5.6.2",
+    "@nestjs/core": "^5.6.2",
+    "@nestjs/websockets": "^5.6.2",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "angulartics2": "^7.2.0",
-    "core-js": "^2.5.7",
+    "angulartics2": "^7.4.1",
+    "core-js": "^2.6.3",
     "hammerjs": "^2.0.8",
     "js-sha256": "^0.9.0",
-    "nodemon": "^1.18.7",
-    "reflect-metadata": "^0.1.12",
-    "rollbar": "^2.5.0",
+    "nodemon": "^1.18.9",
+    "reflect-metadata": "^0.1.13",
+    "rollbar": "^2.5.2",
     "rxjs": "~6.3.3",
     "typescript": "~3.1.6",
     "uuid": "^3.3.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "^7.0.7",
-    "@angular/compiler-cli": "^7.1.0",
-    "@angular/language-service": "^7.1.0",
+    "@angular-devkit/build-angular": "^0.12.3",
+    "@angular/cli": "^7.2.3",
+    "@angular/compiler-cli": "^7.2.2",
+    "@angular/language-service": "^7.2.2",
     "@biesbjerg/ngx-translate-extract": "^2.3.4",
-    "@types/jasmine": "^2.8.12",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.10",
-    "@types/socket.io": "^2.1.0",
+    "@types/node": "^10.12.19",
+    "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
@@ -74,8 +74,8 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "rimraf": "^2.6.2",
+    "protractor": "^5.4.2",
+    "rimraf": "^2.6.3",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.7.0",
     "tslint": "~5.11.0"
